--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dj-studio-pro",
+  "name": "patrick-box",
   "version": "1.0.0",
-  "description": "Professional DJ Studio – dual-deck mixing with EQ, effects, crossfader & spectrum analyser",
+  "description": "patrick box",
   "private": true
 }
